Added buttons and server logic for 2 views
