# paste-it-cleaned-app/swagger/swagger.json
@@ -39,8 +39,12 @@
                 "operationId": "GetHits",
                 "consumes": [],
                 "produces": ["text/plain", "application/json", "text/json"],
-                "parameters": [{ "name": "authorization", "in": "header", "required": false, "type": "string" }],
-                "responses": { "200": { "description": "Success", "schema": { "$ref": "#/definitions/ActionResult" } }, "401": { "description": "Unauthorized" }, "403": { "description": "Forbidden" }, "500": { "description": "Server Error" } }
+                "parameters": [
+                    { "name": "authorization", "in": "header", "required": false, "type": "string" },
+                    { "name": "page", "in": "query", "required": false, "type": "integer", "format": "int32" },
+                    { "name": "pageSize", "in": "query", "required": false, "type": "integer", "format": "int32" }
+                ],
+                "responses": { "200": { "description": "Success", "schema": { "$ref": "#/definitions/PagedList[Hit]" } }, "401": { "description": "Unauthorized" }, "403": { "description": "Forbidden" }, "500": { "description": "Server Error" } }
             }
         },
         "/billing/invoices/{id}": {
@@ -94,12 +98,7 @@
                 "consumes": [],
                 "produces": ["text/plain", "application/json", "text/json"],
                 "parameters": [{ "name": "authorization", "in": "header", "required": false, "type": "string" }],
-                "responses": {
-                    "200": { "description": "Success", "schema": { "uniqueItems": false, "type": "array", "items": { "$ref": "#/definitions/Hit" } } },
-                    "401": { "description": "Unauthorized" },
-                    "403": { "description": "Forbidden" },
-                    "500": { "description": "Server Error" }
-                }
+                "responses": { "200": { "description": "Success", "schema": { "$ref": "#/definitions/PagedList[Hit]" } }, "401": { "description": "Unauthorized" }, "403": { "description": "Forbidden" }, "500": { "description": "Server Error" } }
             }
         },
         "/dashboard/hits/daily": {
@@ -233,8 +232,18 @@
     },
     "definitions": {
         "AccountRequest": { "type": "object", "properties": { "any": { "type": "string" } } },
-        "ActionResult": { "type": "object", "properties": {} },
-        "BillingRequest": { "type": "object", "properties": { "any": { "type": "string" } } },
+        "PagedList[Hit]": {
+            "type": "object",
+            "properties": {
+                "results": { "uniqueItems": false, "type": "array", "items": { "$ref": "#/definitions/Hit" } },
+                "currentPage": { "format": "int32", "type": "integer" },
+                "pageCount": { "format": "int32", "type": "integer" },
+                "pageSize": { "format": "int32", "type": "integer" },
+                "rowCount": { "format": "int32", "type": "integer" },
+                "firstRowOnPage": { "format": "int32", "type": "integer", "readOnly": true },
+                "lastRowOnPage": { "format": "int32", "type": "integer", "readOnly": true }
+            }
+        },
         "Hit": {
             "type": "object",
             "properties": {
@@ -249,6 +258,8 @@
                 "userAgent": { "type": "string" }
             }
         },
+        "ActionResult": { "type": "object", "properties": {} },
+        "BillingRequest": { "type": "object", "properties": { "any": { "type": "string" } } },
         "HitDaily": {
             "type": "object",
             "properties": {
